Leggere diversi input e generare una password con essi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     
+    <p id="password"></p>
 
     <!--inclusion js-->
     <script src="./js/main.js" type="text/javascript"></script>
